Fix testimonials line wrap, fix nav z-index on mobile, adjust filter bar styles

--- a/assets/css/_gallery.scss
+++ b/assets/css/_gallery.scss
@@ -1,7 +1,7 @@
 // Gallery
 
 .gallery {
-  width: calc(100% - #{$gallery_gutter}*2);
+  width: 100%;
   margin: 0 auto;
 
   .gallery-sizer, .gallery-item {
@@ -16,6 +16,9 @@
 
   .gallery-gutter {
     width: $gallery_gutter;
+    @include media-max($bp_gallery_1col) {
+      width: 0;
+    }
   }
 
   .gallery-item {
@@ -56,36 +59,22 @@
 }
 
 .filter-bar {
-  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.05);
-  border-radius: $filter_radius;
+  background-color: $color_white;
+  box-shadow: 0 10px 16px -4px rgba(0,0,0,0.05);
+  border-radius: $filter_radius + $filter_padding;
   overflow: hidden;
   display: flex;
   align-items: stretch;
+  padding: $filter_padding;
 
   button {
     flex: 1;
     margin: 0;
-    border-radius: 0;
-    + button {
-      border-left: 1px solid $color_birch;
-      &.is-checked {
-        border-left: 1px solid $color_text;
-      }
-    }
-    &:first-child {
-      border-bottom-left-radius: $filter_radius;
-      border-top-left-radius: $filter_radius;
-    }
-    &:last-child {
-      border-bottom-right-radius: $filter_radius;
-      border-top-right-radius: $filter_radius;
-    }
+    border-radius: $filter_radius;
+    box-shadow: none;
     &.is-checked {
       background: $color_text;
       color: $color_white;
-      + button {
-        border-left: 1px solid $color_text;
-      }
     }
   }
 
@@ -93,9 +82,6 @@
     flex-wrap: wrap;
     button {
       flex: 1 1 50%;
-      &:nth-child(1), &:nth-child(2) {
-        border-bottom: 1px solid $color_birch;
-      }
     }
   }
 }
