--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -11,6 +11,7 @@
   left: 0;
   top: 0;
   width: $nav_width;
+  z-index: $z_nav;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,7 +65,7 @@
     height: $nav_mobile_height;
     top: auto;
     bottom: 0;
-    box-shadow: 0 -8px 40px rgba(0,0,0,0.02);
+    box-shadow: 0 -8px 40px rgba(0,0,0,0.05);
 
     .logo {
       display: none;
