--- a/assets/css/_testimonials.scss
+++ b/assets/css/_testimonials.scss
@@ -31,6 +31,7 @@
     .quote-author {
       @extend %font-sans;
       font-weight: 600;
+      display: block;
       &:before {
         content: '—';
         left: 0;
@@ -39,6 +40,7 @@
     }
 
     .quote-location {
+      display: block;
       font-style: italic;
       margin-top: 0.2rem;
     }
